objects/Filter_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Operators__c</fullName>
        <description>Holds applicable operators for selected field.</description>
        <label>Applicable Operators</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Label__c</fullName>
        <description>Hold lookup field value label.</description>
        <label>Lookup Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Value__c</fullName>
        <description>Holds lookup field value(id).</description>
        <inlineHelpText>Holds lookup field value(id).</inlineHelpText>
        <label>Lookup Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>Holds order of the filter.</description>
        <inlineHelpText>Holds order of the filter.</inlineHelpText>
        <label>Order Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PickList_Field_JSON__c</fullName>
        <description>Holds picklist options.</description>
        <inlineHelpText>Holds picklist options.</inlineHelpText>
        <label>PickList Field JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referenced_Object_Label__c</fullName>
        <description>Hold lookup field object label.</description>
        <inlineHelpText>Hold lookup field object label.</inlineHelpText>
        <label>Referenced Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenced_Object_Name__c</fullName>
        <description>Holds lookup field Object Label</description>
        <inlineHelpText>Holds lookup field Object Label</inlineHelpText>
        <label>Referenced Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search__c</fullName>
        <label>Search</label>
        <referenceTo>Search__c</referenceTo>
        <relationshipLabel>Filter Conditions</relationshipLabel>
        <relationshipName>Searches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected_Operator_Label__c</fullName>
        <description>Holds selected operator label.</description>
        <inlineHelpText>Holds selected operator label.</inlineHelpText>
        <label>Selected Operator Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Operator__c</fullName>
        <description>Holds selected operator for this filter.</description>
        <inlineHelpText>Holds selected operator for this filter.</inlineHelpText>
        <label>Selected Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Label__c</fullName>
        <description>Holds selected field label.</description>
        <label>Source Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Name__c</fullName>
        <description>Holds selected field  API name.</description>
        <inlineHelpText>Holds selected field API name.</inlineHelpText>
        <label>Source Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field_Type__c</fullName>
        <description>Holds selected field data type.</description>
        <inlineHelpText>Holds selected field data type.</inlineHelpText>
        <label>Source Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field_Value__c</fullName>
        <description>Holds value for selected field.</description>
        <inlineHelpText>Holds value for selected field.</inlineHelpText>
        <label>Target Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Filter Condition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{00}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filter Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>